added info about uni and some photos

--- a/service/pcrepair.html
+++ b/service/pcrepair.html
@@ -1,3 +1,4 @@
+
 <!--                                                                              
                      _   _          _            _     _                           
                     | | | |        | |          | |   (_)                          
@@ -99,8 +100,8 @@ HoomanBean(w/ Voice), Engineer, Entrepreneur, H4ck3r, Gardener
       <a href="../service/web_feedback.html">> Client Feedback</a>
       <p>Service > PC Repair</p>
       <hr>
-      <a href="../service/onsite_repair.html">> Onsite Support</a>
-      <a href="../service/remote_repair.html">> Remote Support</a>
+      <a href="../service/pcrepair.html#onsite">> Onsite Support</a>
+      <a href="../service/pcrepair.html#remote">> Remote Support</a>
       <a href="../service/repair_feedback.html">> Reviews</a>
       <p>Service > Clients:</p>
       <hr>
@@ -119,29 +120,34 @@ HoomanBean(w/ Voice), Engineer, Entrepreneur, H4ck3r, Gardener
     <!-- PROJECT HEADER -->
     <div id="project-header">
 
-      <div class="main-title">General Engineering at University of Durham</div>
-      <div class="body-text">As part of the Russell Group of leading research-intensive universities, Durham University has a longstanding and powerful commitment to research and research-led teaching. It is recognised as one of the leading centres of research in Engineering in the world. Their research covers a wide range of topics, and they encourage interdisciplinary research within the Department as well as national and international cooperation.
-
-The degree programmes are accredited by the Professional Engineering Institutions on behalf of the Engineering Council. The BEng programmes partially satisfy the educational base for a Chartered Engineer (CEng), and will fully meet the requirement when complemented with accredited Further Learning.</div>
-<img loading="lazy" class="project-header-image" src="../assets/images/durham_engineering.png" style="float: left; width: 100%; margin-right: 20px; margin-bottom: 20px;">
+      <div class="main-title">PC Repair</div>
+      <div class="body-text">
+<h1 id="onsite">Onsite Repair</h1>
+I am not quite like your usual IT guy. I can give you a friendly and professional PC repair and support service. I am a fully qualified electronic engineer and I have a 'no fix no fee' policy. No problem is too great or small!
+<h1 id="remote">Remote Repair</h1>
+For instant expert advice and technical assistance one option is Remote Support. Why wait?
+<br><br>
+Once a diagnosis has been made our engineer will advise you on what further action needs to be taken, roughly how long it will take and how much it will cost. Remember we have a No-Fix-No-Fee policy.
+<br><br>
+How to Use our Remote Support Service:<br>
+Step 1: Please request a remote support session by getting in touch.
+<br><br>
+Step 2: Once the date and time of the session has been agreed we will email you our remote support software (please download this to the computer to be repaired).
+<br><br>
+Step 3: At the agreed date and time please ensure your computer is turned on, ready for the session. Our engineer will call you on the telephone number you have provided and guide you through the connection process.
+<br><br>
+Please note: while most software problems can be fixed remotely, service is faster / more comprehensive with physical access to the device!
       </div>
+      <img loading="lazy" class="project-header-image" src="../assets/images/nanode.png">
+      </div>
+
 
       <div id="project-details">
-        <div class="subheader-text">1st Year Engineering</div>
+        <div class="subheader-text">Project Details</div>
         <div class="project-details-content">
-          <div class="body-text">1st Year Engineering The first year of the Engineering course is designed to teach you core engineering knowledge across Civil, Mechanical, Electronic and Electrical Engineering as well as to equip you with essential mathematics tools that you will use to solve your engineering problems. You will also get hands-on experience through weekly laboratories and an intensive practical engineering skills course at the end of the academic year. Our first year is split into six modules: three on engineering theory, one on practical engineering skills/design, one on mathematics plus a free elective module from across the University. One of the engineering theory modules is focused on Solid Mechanics and Structures, where are students learn about stress, strain and failure of engineering materials as well as understanding structural actions and the behavior of beams. The Thermodynamics and Fluid Mechanics module focused on the behavior of fluids in static and dynamic situations as well as how the fundamental laws of thermodynamics can be applied to engineering problems. The final engineering theory module is focused on electromagnetism, core knowledge for understanding electrical machines, as well as analogue and digital electronics. The Engineering Practice module will develop your practical skills via weekly laboratories that are designed to reinforce the taught content. You will also be taught how to use Computer Aided Design (CAD) to design engineering components, control microprocessors and implement your scientific knowledge into computer code, and sharpen your sketching skills to help you communicate your engineering ideas and solutions.
-<img loading="lazy" class="project-header-image" src="../assets/images/uni_eng_year1.png" style="float: left; width: 100%; margin-right: 20px; margin-bottom: 20px;">
+          <div class="body-text">Project details text here</div>
+        </div>
       </div>
-      </div>
-      </div>
-
-      <div class="subheader-text">2nd Year Engineering</div>
-      <div class="project-details-content">
-        <div class="body-text">As with the first year, in the second year of Durham’s General Engineering course you will learn about all of the core engineering disciplines of Mechanical, Civil, Electrical and Electronic Engineering. This is reflected in the second-year models, with one module aligned to each of these areas. The Solid Mechanics & Structures 2 module will build on the first-year content, strengthening students’ knowledge of the mechanics of materials and structures and inducing dynamics. The Thermodynamics & Fluid Mechanics 2 content explores more advanced topics, such as combustion and viscous fluid flow, whereas Electronics and Electrical Engineering are each the focus of a full module. The engineering modules are supported by an Engineering Mathematics module where students improve their understanding of probability and data analysis as well as different numerical tools that can be used to analyze Engineering problems. In addition to lecture content, students will learn how to implement more complex routines on microcontrollers. They will also enhance their technical writing skills through formally-assessed laboratory reports and work in teams to solve challenging engineering problems guided by industry professionals as part of the Engineering Design module.
-<img loading="lazy" class="project-header-image" src="../assets/images/uni_eng_year2.png" style="float: left; width: 100%; margin-right: 20px; margin-bottom: 20px;">
-    </div>
-    </div>
-    </div>
 
       <!-- IMAGE GALLERY -->
       <div id="project-gallery">
@@ -150,33 +156,17 @@ The degree programmes are accredited by the Professional Engineering Institution
         <div class="project-gallery-content">
 
           <div class="gallery-image-container half-width">
-            <img loading="lazy" src="../assets/images/uni_WSN.jpg" class="gallery-image">
+            <img loading="lazy" src="../assets/images/code.jpeg" class="gallery-image">
             <span class="image-caption">Give your image a caption. People love context.</span>
           </div>
           <div class="gallery-image-container half-width">
-            <img loading="lazy" src="../assets/images/uni_WSN2.jpg" class="gallery-image">
-            <span class="image-caption">Give your image a caption. People love context.</span>
-          </div>          
-          <div class="gallery-image-container half-width">
-            <img loading="lazy" src="../assets/images/uni_2_robot.jpg" class="gallery-image">
+            <img loading="lazy" src="../assets/images/sketchbook.jpeg" class="gallery-image">
             <span class="image-caption">Give your image a caption. People love context.</span>
           </div>
-          <div class="gallery-image-container half-width">
-            <img loading="lazy" src="../assets/images/uni_robot.jpg" class="gallery-image">
+          <div class="gallery-image-container">
+            <img loading="lazy" src="../assets/images/camera.jpeg" class="gallery-image">
             <span class="image-caption">Give your image a caption. People love context.</span>
           </div>
-          <div class="gallery-image-container half-width">
-            <img loading="lazy" src="../assets/images/uni_robotics.jpg" class="gallery-image">
-            <span class="image-caption">Give your image a caption. People love context.</span>
-          </div>
-          <div class="gallery-image-container half-width">
-            <img loading="lazy" src="../assets/images/uni_BBQ.jpg" class="gallery-image">
-            <span class="image-caption">Give your image a caption. People love context.</span>
-          </div>
-          <div class="gallery-image-container half-width">
-            <img loading="lazy" src="../assets/images/uni_cathedral.jpg" class="gallery-image">
-            <span class="image-caption">Give your image a caption. People love context.</span>
-          </div>                              
         </div>
       </div>
     </div>
