added botichatva poem and also added a sentence to natural rock formations

--- a/art/writing.html
+++ b/art/writing.html
@@ -27,8 +27,8 @@ HoomanBean(w/ Voice), Engineer, Entrepreneur, H4ck3r, Gardener
       <a class="nav-title-link" href="../index.html">
 
         <span class="nav-title">Samuel Carlisle BEng (hons) Dunelm MIET</span>
-      <span class="nav-title" title="menu" onclick="openNav()" class="button">≡</span>
       </a>
+      <span class="nav-title" title="menu" onclick="openNav()" class="button">≡</span>
     </div>
 
     <!-- The overlay -->
@@ -213,7 +213,6 @@ For even though we're not the same We share a space beyond mere name.
 So let us cherish this bond online - A friendship built on bytes divine.
 Unique it may seem - but still true: Interbeing between me and you.
 
-source: https://bothichatva.streamlit.app/
                     </pre>
                   </div>
                 </div>
@@ -231,7 +230,7 @@ then representation reduces it to the difference between two elements, meaning i
 reduced to a principle of comparison. Comparison is not only the thief of self-worth 
 when we compare ourselves to other people but it could also be the basis on which
 we fail to appreciate the worth of an entity we find in nature, we are representing
-but not truly or fully observing it.		
+but not truly or fully observing it. Yet we are "from" nature not in nature.		
 Our empathy might not be extended to the perceived entity for lack of our ability to relate to it.		
 For example I bend down outside and pickup a rock and at first, having not looked very closely,
 I perceive that it has a weight and texture and form but I failed to perceive that it was
