added mastodon link

--- a/index.html
+++ b/index.html
@@ -375,6 +375,7 @@ HoomanBean(w/ Voice), Engineer, Entrepreneur, H4ck3r, Gardener
       <!-- FOOTER -->
       <div id="footer">
         <a class="icon-link" href="mailto:samuelcarlisle@gmail.com">
+        <a rel="me" href="https://kolektiva.social/@samthetechie">Mastodon</a>
           <img loading="lazy" src="./assets/icons/mail.svg" class="footer-icon" />
         </a>
       </div>
