added mastodon svg and updated footer links

--- a/index.html
+++ b/index.html
@@ -374,8 +374,10 @@ HoomanBean(w/ Voice), Engineer, Entrepreneur, H4ck3r, Gardener
       </div>
       <!-- FOOTER -->
       <div id="footer">
+        <a rel="me" href="https://kolektiva.social/@samthetechie">
+        <img loading="lazy" src="./assets/icons/mastodon.svg" class="footer-icon" />  
+        </a>
         <a class="icon-link" href="mailto:samuelcarlisle@gmail.com">
-        <a rel="me" href="https://kolektiva.social/@samthetechie">Mastodon</a>
           <img loading="lazy" src="./assets/icons/mail.svg" class="footer-icon" />
         </a>
       </div>
