added the soundcloud embed

--- a/talks/fabrica.html
+++ b/talks/fabrica.html
@@ -127,9 +127,10 @@ HoomanBean(w/ Voice), Engineer, Entrepreneur, H4ck3r, Gardener
 
 
       <div id="project-details">
-        <div class="subheader-text">Background</div>
+        <div class="subheader-text">Content - Audio</div>
         <div class="project-details-content">
           <div class="body-text">More Info</div>
+          <iframe width="100%" height="166" scrolling="no" frameborder="no" allow="autoplay" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/1484887669&color=%23ff5500&auto_play=false&hide_related=false&show_comments=true&show_user=true&show_reposts=false&show_teaser=true"></iframe><div style="font-size: 10px; color: #cccccc;line-break: anywhere;word-break: normal;overflow: hidden;white-space: nowrap;text-overflow: ellipsis; font-family: Interstate,Lucida Grande,Lucida Sans Unicode,Lucida Sans,Garuda,Verdana,Tahoma,sans-serif;font-weight: 100;"><a href="https://soundcloud.com/samuel-carlisle" title="Samuel Carlisle" target="_blank" style="color: #cccccc; text-decoration: none;">Samuel Carlisle</a> · <a href="https://soundcloud.com/samuel-carlisle/trust-but-verify" title="&quot;Trust but Verify&quot;" target="_blank" style="color: #cccccc; text-decoration: none;">&quot;Trust but Verify&quot;</a></div>
         </div>
       </div>
 
