--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@ HoomanBean(w/ Voice), Engineer, Entrepreneur, H4ck3r, Gardener
         <div id="portfolio-header-text-container">
           <div class="header-text">
             <span class="main-title">Hey, I'm Samuel Carlisle</span>
-            <div class="body-text">I am an electronic engineer, community organizer, civic media expert, and entrepreneur.</div>
+            <div class="body-text">HoomanBean(w/ Voice), Engineer, Civic Media, H4ck3r, Gardener</div>
           </div>
           <a class="button" id="my-project-link">
             <span class="button-text">Check out the projects I have done</span>
