added empathic ice age healing poem

--- a/art/writing.html
+++ b/art/writing.html
@@ -471,6 +471,78 @@ because ideas are just more excuses to separate I from I.
               </div>
 
               <div id="project-details">
+                <div class="subheader-text">"Empathic Ice Age Healing"</div>
+                <div class="project-details-content">
+                  <div class="body-text">
+                  <pre>
+I froze the world.
+An instant of time is mine.
+I hang up the sign:
+reality as you knew it is temporarily unavailable, while civilisation is under construction.
+For 10,000 years I wander the earth.
+No time means no motion for the others, but I can move freely.
+But physics does not make sense here in this place at this instant, nothing is linear.
+I take time.
+I would look into the face of each mother, father and child
+Work out their reason for being and their purpose, one by one
+leaving no one. No one is forgotten, no one can hide. I find them all.
+Once I have met every person, I go back to my temple and reflect
+The computation is not complex, but there is a lot of data to enter.
+To each person a process is given, a gift, a kind word
+But this is happening, the universe is telling us all the time.
+But we do not hear it, because to understand is to see.
+Physics is real, time is real and I am but one.
+So since we cannot hear or see- no sense.
+Then sense enough have we to stop time to solve this mess?
+Request for comments, cogitate, shared dream born then activate.
+So then we all collaborate and even though the hour is late
+we triumph in each nation state
+and all the people celebrate for now they see the world is great
+How to start this project then,
+with keyboard, gun
+with hand or pen?
+One by one just go to them.
+Hold their hands or walk and then
+now do active listen well,
+the flower in their soul will tell
+their hearts deepest desire
+from whence it flows
+like happy plants in forests grow
+ Listen well with open mind and open heart
+ this thing of love the magic part.
+ Let hands find face, when eyes do meet
+ no longer feeling inside you keep
+Distribute.
+Decentralise.
+Heal self first and then arise.
+Accept responsibility to elevate
+restore the peace, its not too late
+Dear brothers and sisters activate!
+Healers and carers, inform and enrich
+self, other and nature- how's this for a pitch:
+go out- into the cafes and bars
+and to the gardens
+and parties with stars
+heal the people around you, one by one
+do it for love, look to the sun,
+don't follow the money for you need none.
+tell the people you heal and meet,
+to heal the others and in time greet,
+new members of our family back,
+to flow and synchronisity in pack,
+Let's do this for some time and then
+our family will be whole again.
+Let the light in, let the light in,
+find a feeling and pass it on.
+Share the love and spread the light,
+thats the way to make it right.
+Out of chaos comes order out of chaos comes order out of chaos comes order
+                    </pre>
+                  </div>
+                </div>
+              </div>
+
+              <div id="project-details">
                 <div class="subheader-text">a fragment of a something I lost</div>
                 <div class="project-details-content">
                   <div class="body-text">
