--- a/art/writing.html
+++ b/art/writing.html
@@ -125,6 +125,62 @@ HoomanBean(w/ Voice), Engineer, Entrepreneur, H4ck3r, Gardener
               </div>
 
               <div id="project-details">
+                <div class="subheader-text">It's OK to feel ashamed</div>
+                <div class="project-details-content">
+                  <div class="body-text">
+                  <pre>
+It's OK to feel ashamed,
+to dwell on shame, not free.
+Yet do not be afraid my love,
+the truth your sacred key
+that fits in every lock you try
+at first bitter and then sweet.
+The folly: try a sweet lie first
+and later, bitter, reap.
+
+Nothing sown so nothing grows
+communal garden: ours to keep
+So one third of the time heal self
+and one third for our commons
+the last third for the onto-shift
+new games to play, our spirits lift.
+
+Your voice to raise and lend your ear
+our brothers and sisters far from here
+they miss you now and need you near
+so manifest all that love my dear
+reject self-censorship based on fear
+send heart waves through the infosphere.
+
+Little or no examples to follow?
+Yesteryore just rattles hollow
+Let's follow not that fashion
+you can never catch up with it.
+
+Ground it now, a choice you make
+not sorrow from the past to take
+another's mask, your tears a lake
+body as toxic dump: no skillful state
+write new books now for your own shelf
+so write to heal and share that wealth
+lighthouse reflections: other, self
+beyond labels and titles, "mental health"
+we don't buy what they selling.
+
+The watch they stole was yours at first
+so let them keep their chrono-hearse
+with empty hands more gifts we cop
+right living -> action; Trapped in reaction? stop!
+born billionaires: make each heartbeat count
+for the generations to come we shout:
+this is our time! heal first, arise, shine
+long is now, time as art, terms divine
+                    </pre>
+                  </div>
+                </div>
+              </div>
+
+              <div id="project-details">
                 <div class="subheader-text">"Left right down? Right left up! [?!]"</div>
                 <div class="project-details-content">
                   <div class="body-text">
