ok bluegriffon editor just got uninstalled. Worse than awful. Back to sublime and terminal.

--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@ HoomanBean(w/ Voice), Engineer, Entrepreneur, H4ck3r, Gardener-->
     <div id="main-content">
       <!-- PORTFOLIO HEADER -->
       <div id="portfolio-header">
-        <div id="portfolio-header-image-container"> <img loading="lazy" src="./assets/images/sam.jpg"
+        <div id="portfolio-header-image-container"> <img loading="lazy" src="./assets/images/s.jpg"
             class="portfolio-header-image"> <span class="image-caption">Sam in
             2022</span> </div>
         <div id="portfolio-header-text-container">
