Css: removed conditional margins based on media size

--- a/index.html
+++ b/index.html
@@ -149,7 +149,7 @@ HoomanBean(w/ Voice), Engineer, Entrepreneur, H4ck3r, Gardener-->
                 More</span> <img loading="lazy" src="./assets/icons/arrow-right.svg"
                 class="right-arrow-icon"> </a> </div>
           <div class="project-card"> <img loading="lazy" src="./assets/images/cryptopartylondon.jpg"
-              class="project-image" style="height: 400px;">
+              class="project-image">
             <div class="project-card-text-container">
               <div class="subheader-text project-title">Security Engineering and
                 Cybersecurity Consulting</div>
@@ -177,7 +177,7 @@ HoomanBean(w/ Voice), Engineer, Entrepreneur, H4ck3r, Gardener-->
                 More</span> <img loading="lazy" src="./assets/icons/arrow-right.svg"
                 class="right-arrow-icon"> </a> </div>
           <div class="project-card"> <img loading="lazy" src="./assets/images/SAMBiOtechie.png"
-              class="project-image" style="height: 400px;">
+              class="project-image">
             <div class="project-card-text-container">
               <div class="subheader-text project-title">Green Engineering and
                 Sustainability Consulting</div>
@@ -199,7 +199,7 @@ HoomanBean(w/ Voice), Engineer, Entrepreneur, H4ck3r, Gardener-->
       <div id="my-client-section"> <span class="subheader-text">Recent Clients:</span>
         <div class="projects-container">
           <div class="project-card"> <img loading="lazy" src="./assets/images/dragon_dreaming.png"
-              class="project-image" style="height: 400px;">
+              class="project-image">
             <div class="project-card-text-container">
               <div class="subheader-text project-title">Dragon Dreaming Intl</div>
               <div class="body-text project-card-text">IT and Web consulting for
@@ -226,7 +226,7 @@ HoomanBean(w/ Voice), Engineer, Entrepreneur, H4ck3r, Gardener-->
       <div id="my-project-section"> <span class="subheader-text">Projects:</span>
         <div class="projects-container">
           <div class="project-card"> <img loading="lazy" src="./assets/images/animachine_2.jpeg"
-              class="project-image" style="height: 400px;">
+              class="project-image">
             <div class="project-card-text-container">
               <div class="subheader-text project-title">#Animachine</div>
               <div class="body-text project-card-text">Participative digital
@@ -240,7 +240,7 @@ HoomanBean(w/ Voice), Engineer, Entrepreneur, H4ck3r, Gardener-->
                 More</span> <img loading="lazy" src="./assets/icons/arrow-right.svg"
                 class="right-arrow-icon"> </a> </div>
           <div class="project-card"> <img loading="lazy" src="./assets/images/20140724_153555.jpg"
-              class="project-image" style="height: 400px;">
+              class="project-image">
             <div class="subheader-text project-title">Electronic Medical Records</div>
             <div class="body-text project-card-text">Designed, tested and built
               solar-powered HF radio-synchronised electronic medical records
@@ -250,7 +250,7 @@ HoomanBean(w/ Voice), Engineer, Entrepreneur, H4ck3r, Gardener-->
                 More</span> <img loading="lazy" src="./assets/icons/arrow-right.svg"
                 class="right-arrow-icon"> </a> </div>
           <div class="project-card"> <img loading="lazy" src="./assets/images/sukey_app.jpg"
-              class="project-image" style="height: 400px;">
+              class="project-image">
             <div class="project-card-text-container">
               <div class="subheader-text project-title">Sukey</div>
               <div class="body-text project-card-text">Keeping protesters mobile
@@ -260,7 +260,7 @@ HoomanBean(w/ Voice), Engineer, Entrepreneur, H4ck3r, Gardener-->
                 More</span> <img loading="lazy" src="./assets/icons/arrow-right.svg"
                 class="right-arrow-icon"> </a> </div>
           <div class="project-card"> <img loading="lazy" src="./assets/images/ose_backhoe.jpg"
-              class="project-image" style="height: 400px;">
+              class="project-image">
             <div class="project-card-text-container">
               <div class="subheader-text project-title">Open Source Ecology</div>
               <div class="body-text project-card-text">Designing open source
@@ -271,7 +271,7 @@ HoomanBean(w/ Voice), Engineer, Entrepreneur, H4ck3r, Gardener-->
                 More</span> <img loading="lazy" src="./assets/icons/arrow-right.svg"
                 class="right-arrow-icon"> </a> </div>
           <div class="project-card"> <img loading="lazy" src="./assets/images/liebe_freiheit_alles.jpg"
-              class="project-image" style="height: 400px;">
+              class="project-image">
             <div class="project-card-text-container">
               <div class="subheader-text project-title">Reprap</div>
               <div class="body-text project-card-text">Open Source 3D printing.
@@ -282,7 +282,7 @@ HoomanBean(w/ Voice), Engineer, Entrepreneur, H4ck3r, Gardener-->
                 More</span> <img loading="lazy" src="./assets/icons/arrow-right.svg"
                 class="right-arrow-icon"> </a> </div>
           <div class="project-card"> <img loading="lazy" src="./assets/images/XBee-2-mW.jpg"
-              class="project-image" style="height: 400px;">
+              class="project-image">
             <div class="project-card-text-container">
               <div class="subheader-text project-title">Building Banter</div>
               <div class="body-text project-card-text">Improving energy
@@ -293,7 +293,7 @@ HoomanBean(w/ Voice), Engineer, Entrepreneur, H4ck3r, Gardener-->
                 More</span> <img loading="lazy" src="./assets/icons/arrow-right.svg"
                 class="right-arrow-icon"> </a> </div>
           <div class="project-card"> <img loading="lazy" src="./assets/images/classic4.jpg"
-              class="project-image" style="height: 400px;">
+              class="project-image">
             <div class="project-card-text-container">
               <div class="subheader-text project-title">Classic 4</div>
               <div class="body-text project-card-text">Electro Accupuncture /
@@ -304,7 +304,7 @@ HoomanBean(w/ Voice), Engineer, Entrepreneur, H4ck3r, Gardener-->
                 More</span> <img loading="lazy" src="./assets/icons/arrow-right.svg"
                 class="right-arrow-icon"> </a> </div>
           <div class="project-card"> <img loading="lazy" src="./assets/images/nanode.png"
-              class="project-image" style="height: 400px;">
+              class="project-image">
             <div class="project-card-text-container">
               <div class="subheader-text project-title">Nanode</div>
               <div class="body-text project-card-text">An open source
@@ -320,7 +320,7 @@ HoomanBean(w/ Voice), Engineer, Entrepreneur, H4ck3r, Gardener-->
         <!-- Actions Section --> <span class="subheader-text">Actions:</span>
         <div class="projects-container">
           <div class="project-card"> <img loading="lazy" src="./assets/images/SAMBiOtechie.png"
-              class="project-image" style="height: 400px;">
+              class="project-image">
             <div class="project-card-text-container">
               <div class="subheader-text project-title">EcoVillage</div>
               <div class="body-text project-card-text">Practising voluntary
@@ -331,7 +331,7 @@ HoomanBean(w/ Voice), Engineer, Entrepreneur, H4ck3r, Gardener-->
                 More</span> <img loading="lazy" src="./assets/icons/arrow-right.svg"
                 class="right-arrow-icon"> </a> </div>
           <div class="project-card"> <img loading="lazy" src="./assets/images/occupy_6.jpg"
-              class="project-image" style="height: 400px;">
+              class="project-image">
             <div class="project-card-text-container">
               <div class="subheader-text project-title">Occupy London: Tech Team</div>
               <div class="body-text project-card-text">Occupy London was a
@@ -341,7 +341,7 @@ HoomanBean(w/ Voice), Engineer, Entrepreneur, H4ck3r, Gardener-->
                 More</span> <img loading="lazy" src="./assets/icons/arrow-right.svg"
                 class="right-arrow-icon"> </a> </div>
           <div class="project-card"> <img loading="lazy" src="./assets/images/Cryptoparty.png"
-              class="project-image" style="height: 400px;">
+              class="project-image">
             <div class="project-card-text-container">
               <div class="subheader-text project-title">Cryptoparty London</div>
               <div class="body-text project-card-text">Grassroots, global
@@ -353,7 +353,7 @@ HoomanBean(w/ Voice), Engineer, Entrepreneur, H4ck3r, Gardener-->
                 More</span> <img loading="lazy" src="./assets/icons/arrow-right.svg"
                 class="right-arrow-icon"> </a> </div>
           <div class="project-card"> <img loading="lazy" src="./assets/images/ucloccupation_com.png"
-              class="project-image" style="height: 400px;">
+              class="project-image">
             <div class="project-card-text-container">
               <div class="subheader-text project-title">UCLOccupation</div>
               <div class="body-text project-card-text">Bootstrapped the tech
@@ -365,7 +365,7 @@ HoomanBean(w/ Voice), Engineer, Entrepreneur, H4ck3r, Gardener-->
                 More</span> <img loading="lazy" src="./assets/icons/arrow-right.svg"
                 class="right-arrow-icon"> </a> </div>
           <div class="project-card"> <img loading="lazy" src="./assets/images/fliehkraft_lab_early.jpg"
-              class="project-image" style="height: 400px;">
+              class="project-image">
             <div class="project-card-text-container">
               <div class="subheader-text project-title">Fliehkraft</div>
               <div class="body-text project-card-text">Participative Digital
@@ -376,7 +376,7 @@ HoomanBean(w/ Voice), Engineer, Entrepreneur, H4ck3r, Gardener-->
                 More</span> <img loading="lazy" src="./assets/icons/arrow-right.svg"
                 class="right-arrow-icon"> </a> </div>
           <div class="project-card"> <img loading="lazy" src="./assets/images/hurricane_hackers.png"
-              class="project-image" style="height: 400px;">
+              class="project-image">
             <div class="project-card-text-container">
               <div class="subheader-text project-title">Hurricane Hackers</div>
               <div class="body-text project-card-text">Remote Disaster Relief
