changed back to old profile pic, made smaller

--- a/index.html
+++ b/index.html
@@ -87,12 +87,10 @@ HoomanBean(w/ Voice), Engineer, Entrepreneur, H4ck3r, Gardener-->
     <div id="main-content">
       <!-- PORTFOLIO HEADER -->
       <div id="portfolio-header">
-        <div id="portfolio-header-image-container"> <img loading="lazy" src="./assets/images/s.jpg"
-            class="portfolio-header-image"> <span class="image-caption">Sam in
-            2022</span> </div>
+        <div id="portfolio-header-image-container"> <img loading="lazy" src="./assets/images/sam.jpg"
+            class="portfolio-header-image"> </div>
         <div id="portfolio-header-text-container">
-          <div class="header-text"> <span class="main-title">Hey, I'm Samuel
-              Carlisle</span>
+          <div class="header-text"> <span class="main-title">Hey, I'm Samuel Carlisle</span>
             <div class="body-text">HoomanBean(w/ Voice), Engineer, Civic Media,
               H4ck3r, Gardener</div>
           </div>
