some more updates to the text

--- a/index.html
+++ b/index.html
@@ -143,7 +143,7 @@ HoomanBean(w/ Voice), Engineer, Entrepreneur, H4ck3r, Gardener-->
               class="project-image">
             <div class="project-card-text-container">
               <div class="subheader-text project-title">TeslaCo</div>
-              <div class="body-text project-card-text">My security audit, IT and Web consulting enabled this client regain their ability to do online buiness again after bot abuse to their previous website had caused problems with several upstream service providers (including their bank). Recovered from outdated/mismanaged infrastructure and modernised / cleaned up the stack and configuration of all web services that the company uses. Finally, modernised the website and deployed a secure e-commerce platform. Executed a successful marketing campaign and correspondingly the sales in Q1 were very healthy! The client was very happy and back in business.</div>
+              <div class="body-text project-card-text">My security audit, IT and Web consulting enabled this client regain their ability to do online buiness again after bot abuse to their previous website had caused problems with several upstream service providers (including their bank). Recovered from outdated/mismanaged infrastructure and modernised / cleaned up the stack and configuration of all web services that the company uses. Finally, modernised the website and deployed a secure e-commerce platform. Executed a successful marketing campaign and correspondingly the sales in Q1 were very healthy! The client was very happy to be back in business so quickly.</div>
             </div>
           </div>
         </div>
@@ -195,8 +195,7 @@ HoomanBean(w/ Voice), Engineer, Entrepreneur, H4ck3r, Gardener-->
             <div class="project-card-text-container">
               <div class="subheader-text project-title">Reprap</div>
               <div class="body-text project-card-text">Open Source 3D printing.
-                Multiple builds and community contributions to the popular
-                RepRap project (REplicating RAPid prototyper).</div>
+                I have built (from parts) around 5 3D printers (several generations and iterations of the Reprap project) I have also maintained, hacked, modded, repaired various other 3D printers. I love designing parts, using printers for making assemblies, projects, prototyping. I also love hacking and upgrading open source 3D printers.</div>
             </div>
             <a class="button" href="./projects/reprap.html"> <span class="button-text">Read
                 More</span> <img loading="lazy" src="./assets/icons/arrow-right.svg"
@@ -207,7 +206,7 @@ HoomanBean(w/ Voice), Engineer, Entrepreneur, H4ck3r, Gardener-->
               <div class="subheader-text project-title">Building Banter</div>
               <div class="body-text project-card-text">Improving energy
                 efficiency through ‘conversing’ with buildings and users in an
-                engaging manner.</div>
+                engaging manner. I implemented a code and hardware retrofit of a wireless sensor network onto an exisiting industrial energy monitoring device and then deployed several units on site at a Federal Mogul factory.</div>
             </div>
             <a class="button" href="./projects/buildingbanter.html"> <span class="button-text">Read
                 More</span> <img loading="lazy" src="./assets/icons/arrow-right.svg"
