removed sample text

--- a/projects/buildingbanter.html
+++ b/projects/buildingbanter.html
@@ -121,7 +121,7 @@ HoomanBean(w/ Voice), Engineer, Entrepreneur, H4ck3r, Gardener
     <div id="project-header">
 
       <div class="main-title">Building Banter</div>
-      <div class="body-text">A small description about the project goes here, get the reader hooked on the project and tell them why they should continue to read this page. Give it a sweet tagline.</div>
+      <div class="body-text"></div>
       <img loading="lazy" class="project-header-image" src="../assets/images/XBee-2-mW.jpg">
       </div>
 
